# wakosound_cpp

./: CMakeLists.txt  DOCS.md  README.md  resources.qrc  road_map.md
exemple_groove/: groove.json
resources/kits/: kits.json
src/: main.cpp
src/audio/: AudioCache.cpp  AudioCache.h  PitchCache.cpp  PitchCache.h  Player.cpp  Player.h  VoicePool.cpp  VoicePool.h
src/model/: KitManager.cpp  KitManager.h
src/sequencer/: Engine.cpp  Engine.h  Pattern.cpp  Pattern.h
src/ui/: MainWindow.cpp  MainWindow.h  MixerPanel.cpp  MixerPanel.h  PadGrid.cpp  PadGrid.h  SampleBrowser.cpp  SampleBrowser.h  StepGrid.cpp  StepGrid.h  SvgIcons.h  TransportBar.cpp  TransportBar.h
